Ajout recherche et dashboard