@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.stream.Collectors;
-
 @Service
 public class SearchService {
 
@@ -28,23 +27,62 @@ public class SearchService {
         String q = keyword.toLowerCase().trim();
         String[] mots = q.split("[,\\s]+");
 
-        List<Mecanicien> mecaniciens = mecanicienRepo.findAll().stream()
-                .filter(m -> containsAny(m.getNom() + " " + m.getSpecialite() + " " + m.getAdresse(), mots))
-                .collect(Collectors.toList());
+        // 🔎 Détection du type
+        String type = "";
+        if (q.contains("mecanicien")) type = "mecanicien";
+        else if (q.contains("fournisseur")) type = "fournisseur";
+        else if (q.contains("piece") || q.contains("pièce")) type = "piece";
 
-        List<Fournisseur> fournisseurs = fournisseurRepo.findAll().stream()
-                .filter(f -> containsAny(f.getNom() + " " + f.getSpecialite() + " " + f.getAdresse(), mots))
-                .collect(Collectors.toList());
+        // 🔎 Récupérer toutes les spécialités depuis la base
+        Set<String> specialitesDB = new HashSet<>();
+        specialitesDB.addAll(mecanicienRepo.findAll().stream()
+                .map(m -> m.getSpecialite().toLowerCase())
+                .toList());
+        specialitesDB.addAll(fournisseurRepo.findAll().stream()
+                .map(f -> f.getSpecialite().toLowerCase())
+                .toList());
+        specialitesDB.addAll(sparePartRepo.findAll().stream()
+                .map(p -> p.getModele().toLowerCase())
+                .toList());
 
-        List<SparePart> pieces = sparePartRepo.findAll().stream()
-                .filter(p -> containsAny(p.getNom() + " " + p.getModele(), mots))
-                .collect(Collectors.toList());
+        // 🔎 Détection dynamique de la spécialité dans la phrase
+        String specialite = Arrays.stream(mots)
+                .filter(specialitesDB::contains) // garde seulement les mots qui existent dans la base
+                .findFirst()
+                .orElse("");
+
+        // 🔎 Résultats
+        List<Mecanicien> mecaniciens = new ArrayList<>();
+        List<Fournisseur> fournisseurs = new ArrayList<>();
+        List<SparePart> pieces = new ArrayList<>();
+
+        if (type.equals("mecanicien") || type.isEmpty()) {
+            mecaniciens = mecanicienRepo.findAll().stream()
+                    .filter(m -> containsAny(m.getNom() + " " + m.getSpecialite() + " " + m.getAdresse(), mots))
+                    .filter(m -> specialite.isEmpty() || m.getSpecialite().equalsIgnoreCase(specialite))
+                    .collect(Collectors.toList());
+        }
+
+        if (type.equals("fournisseur") || type.isEmpty()) {
+            fournisseurs = fournisseurRepo.findAll().stream()
+                    .filter(f -> containsAny(f.getNom() + " " + f.getSpecialite() + " " + f.getAdresse(), mots))
+                    .filter(f -> specialite.isEmpty() || f.getSpecialite().equalsIgnoreCase(specialite))
+                    .collect(Collectors.toList());
+        }
+
+        if (type.equals("piece") || type.isEmpty()) {
+            pieces = sparePartRepo.findAll().stream()
+                    .filter(p -> containsAny(p.getNom() + " " + p.getModele(), mots))
+                    .filter(p -> specialite.isEmpty() || p.getModele().equalsIgnoreCase(specialite))
+                    .collect(Collectors.toList());
+        }
 
         Map<String, List<?>> results = new HashMap<>();
         results.put("mecaniciens", mecaniciens);
         results.put("fournisseurs", fournisseurs);
-        results.put("pieces", pieces); // 🔹 clé correspond au frontend
-        results.put("ai_keywords", List.of(keyword));
+        results.put("pieces", pieces);
+        results.put("ai_keywords", List.of(Map.of("raw", keyword, "type", type, "specialite", specialite)));
+
         return results;
     }
 
@@ -55,4 +93,9 @@ public class SearchService {
         }
         return false;
     }
+
+    // 🔹 pour /all
+    public List<Mecanicien> getAllMecaniciens() { return mecanicienRepo.findAll(); }
+    public List<Fournisseur> getAllFournisseurs() { return fournisseurRepo.findAll(); }
+    public List<SparePart> getAllPieces() { return sparePartRepo.findAll(); }
 }
